tests/NormalTests/paczka1/fuzzy1/65775231.err
Error in line 3: jiU A275 52,1
Error in line 4: pZZc A970 93,0
Error in line 8: pZZc A275 27,8
Error in line 16: mOn A275 44,
Error in line 10: k5xTR9x A275 89,2
Error in line 12: jiU A250 34,6
Error in line 22: tZ0aD8G S730 70,39
Error in line 24: tZ0aD8G S730 245,3
Error in line 19: mOn A275 62,9
